[gd_scene load_steps=18 format=3 uid="uid://c7v2y8t45ydic"]

[ext_resource type="Script" path="res://scenes/plane/plane.gd" id="1_1sdfh"]
[ext_resource type="Texture2D" uid="uid://dvh708d82cnhp" path="res://assets/plane/planes_sheet.png" id="1_vsre8"]
[ext_resource type="AudioStream" uid="uid://b8sq3c63lxrbk" path="res://assets/audio/engine.mp3" id="3_3iuc1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ja4u6"]
atlas = ExtResource("1_vsre8")
region = Rect2(0, 0, 88, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_611s1"]
atlas = ExtResource("1_vsre8")
region = Rect2(88, 0, 88, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_0rqul"]
atlas = ExtResource("1_vsre8")
region = Rect2(176, 0, 88, 73)

[sub_resource type="SpriteFrames" id="SpriteFrames_mc0h1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ja4u6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_611s1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0rqul")
}],
"loop": true,
"name": &"fly",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_3a5sm"]
radius = 31.0

[sub_resource type="Animation" id="Animation_vhphg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimSprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_lin0j"]
resource_name = "down_animation"
length = 0.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.349066]
}

[sub_resource type="Animation" id="Animation_jy1y1"]
resource_name = "invencible"
length = 0.7
loop_mode = 1
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.333333, 0.666667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.2), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_1c4k3"]
resource_name = "power"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimSprite:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -0.349066, 0.0]
}

[sub_resource type="Animation" id="Animation_huhnv"]
resource_name = "up"
length = 0.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -0.349066]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c2fev"]
_data = {
"RESET": SubResource("Animation_vhphg"),
"down_animation": SubResource("Animation_lin0j"),
"invencible": SubResource("Animation_jy1y1"),
"power": SubResource("Animation_1c4k3"),
"up": SubResource("Animation_huhnv")
}

[sub_resource type="Animation" id="Animation_asbda"]
resource_name = "avanco"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(200, 500)]
}

[sub_resource type="Animation" id="Animation_ubqtd"]
resource_name = "invencible"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.333333, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.2), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4qfup"]
_data = {
"avanco": SubResource("Animation_asbda"),
"invencible": SubResource("Animation_ubqtd")
}

[node name="Plane" type="CharacterBody2D" groups=["Plane"]]
collision_layer = 8
script = ExtResource("1_1sdfh")

[node name="AnimSprite" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.9, 0.9)
sprite_frames = SubResource("SpriteFrames_mc0h1")
animation = &"fly"
autoplay = "fly"
frame_progress = 0.391333

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(6, -2)
scale = Vector2(0.990915, 1.00859)
shape = SubResource("CircleShape2D_3a5sm")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_c2fev")
}

[node name="Sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_3iuc1")
autoplay = true

[node name="VelocityTimer" type="Timer" parent="."]
autostart = true

[node name="AnimationPlayerInvencible" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4qfup")
}

[connection signal="timeout" from="VelocityTimer" to="." method="_on_velocity_timer_timeout"]
